# rdmd-en-x64.macos

./: CMakeLists.txt  README.md
resources/: README-ja.upstream.md  README.upstream.md
resources/hello/: hello.d  hello.go  hello.rs
src/: rdmd.mm
